# browser

./: .gitignore  AI_Usage_Disclosure.md  CMakeLists.txt  Cargo.toml  README.md  Rules.md
.github/workflows/: CI.yml
crates/browser/: Cargo.toml
crates/browser/src/: main.rs
crates/css/: Cargo.toml
crates/css/src/: lib.rs
crates/html/: Cargo.toml
crates/html/src/: dom.rs  lib.rs  parser.rs  token.rs  tokenizer.rs
crates/html/tests/: integration_test.rs
crates/js/: Cargo.toml
crates/js/src/: lib.rs
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: client.rs  context.rs  dns.rs  hsts.rs  http.rs  lib.rs  tls.rs  url.rs
crates/net/tests/: integration_test.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
docs/: FEATURE_LIST.md
docs/decisions/: boa-audit.md  html5ever-and-cssparser.md  network-hardening.md
docs/sessions/: 2026-03-10_network-hardening.md  2026-03-10_rust-workspace-init.md  2026-03-18_security-audit-and-fixes.md  2026-03-19_css-parser-roadmap.md  2026-03-19_network-stack-roadmap.md  2026-04-15_doc-sync.md
include/JS_Engine/: JavaScriptEngine.h
include/Network/: HttpClient.h  URLParser.h
include/Parser/: DOMNode.h  HtmlParser.cpp  HtmlParser.h  Token.h  Tokenizer.cpp  Tokenizer.h
include/Renderer/: Renderer.h
include/Security/: SecurityManager.h
src/: main.cpp
src/Network/: HttpClient.cpp  URLParser.cpp
tests/fixtures/: malformed_page.html  script_style_page.html  simple_page.html
