[package]
name        = "browser"
version     = "0.1.0"
edition.workspace    = true
license.workspace    = true
rust-version.workspace = true

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
net     = { path = "../net" }
html    = { path = "../html" }
bumpalo = { workspace = true }
tokio   = { workspace = true }      # for #[tokio::main]
